[package]
name = "cdn"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"], default-features = false }
futures-util = "0.3.31"

actix-web = { version = "4.12.1", default-features = false, features = ["macros", "compress-gzip", "compress-brotli"] }
actix-multipart = "0.7.2"
actix-files = "0.6.9"
actix-cors = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

mongodb = "3.4.1"
rust-s3 = { version = "0.37.1", default-features = false, features = ["tokio-rustls-tls"] }
clamav-client = { version = "2.2.0", features = ["tokio"] }

image = "0.25.9"
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.25.0"

anyhow = "1.0.100"
thiserror = "2.0.17"

bytes = "1.11.0"
mime = "0.3.17"
url = "2.5.7"
rand = "0.9.2"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
ulid = "1.2.1"

env_logger = "0.11.8"
log = "0.4.29"
lazy_static = "1.5.0"
once_cell = "1.21.3"
